Fork. Enums. Some bug fixes
