# cmd/api/handlers/storage.go
@@ -5,10 +5,12 @@ import (
 	"time"
 
 	"github.com/baking-bad/bcdhub/internal/contractparser/consts"
+	"github.com/baking-bad/bcdhub/internal/contractparser/docstring"
 	"github.com/baking-bad/bcdhub/internal/contractparser/formatter"
 	"github.com/baking-bad/bcdhub/internal/contractparser/meta"
 	"github.com/baking-bad/bcdhub/internal/contractparser/newmiguel"
 	"github.com/baking-bad/bcdhub/internal/elastic"
+	"github.com/baking-bad/bcdhub/internal/jsonschema"
 	"github.com/gin-gonic/gin"
 	"github.com/tidwall/gjson"
 )
@@ -81,7 +83,7 @@ func (ctx *Context) GetContractStorage(c *gin.Context) {
 // @Success 200 {string} string
 // @Failure 400 {object} Error
 // @Failure 500 {object} Error
-// @Router /contract/{network}/{address}/raw_storage [get]
+// @Router /contract/{network}/{address}/storage/raw [get]
 func (ctx *Context) GetContractStorageRaw(c *gin.Context) {
 	var req getContractRequest
 	if err := c.BindUri(&req); handleError(c, err, http.StatusBadRequest) {
@@ -114,7 +116,7 @@ func (ctx *Context) GetContractStorageRaw(c *gin.Context) {
 // @Success 200 {object} gin.H
 // @Failure 400 {object} Error
 // @Failure 500 {object} Error
-// @Router /contract/{network}/{address}/rich_storage [get]
+// @Router /contract/{network}/{address}/storage/rich [get]
 func (ctx *Context) GetContractStorageRich(c *gin.Context) {
 	var req getContractRequest
 	if err := c.BindUri(&req); handleError(c, err, http.StatusBadRequest) {
@@ -142,4 +144,64 @@ func (ctx *Context) GetContractStorageRich(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, resp.Value())
+}
+
+// GetContractStorageSchema godoc
+// @Summary Get contract storage schema
+// @Description Get contract storage schema
+// @Tags contract
+// @ID get-contract-storage-schema
+// @Param network path string true "Network"
+// @Param address path string true "KT address" minlength(36) maxlength(36)
+// @Param fill_type query string false "Fill storage type" Enums(empty, current)
+// @Accept json
+// @Produce json
+// @Success 200 {object} EntrypointSchema
+// @Failure 400 {object} Error
+// @Failure 500 {object} Error
+// @Router /contract/{network}/{address}/storage/schema [get]
+func (ctx *Context) GetContractStorageSchema(c *gin.Context) {
+	var req getContractRequest
+	if err := c.BindUri(&req); handleError(c, err, http.StatusBadRequest) {
+		return
+	}
+	var ssReq storageSchemaRequest
+	if err := c.BindQuery(&ssReq); handleError(c, err, http.StatusBadRequest) {
+		return
+	}
+
+	metadata, err := getStorageMetadata(ctx.ES, req.Address, req.Network)
+	if handleError(c, err, 0) {
+		return
+	}
+
+	schema := new(EntrypointSchema)
+
+	data, err := docstring.GetStorage(metadata)
+	if handleError(c, err, 0) {
+		return
+	}
+	if len(data) > 0 {
+		schema.EntrypointType = data[0]
+	}
+	schema.Schema, schema.DefaultModel, err = jsonschema.Create("0", metadata)
+	if handleError(c, err, 0) {
+		return
+	}
+
+	if ssReq.FillType == "current" {
+		rpc, err := ctx.GetRPC(req.Network)
+		if handleError(c, err, 0) {
+			return
+		}
+		storage, err := rpc.GetScriptStorageJSON(req.Address, 0)
+		if handleError(c, err, 0) {
+			return
+		}
+		if err := schema.DefaultModel.Fill(storage, metadata); handleError(c, err, 0) {
+			return
+		}
+	}
+
+	c.JSON(http.StatusOK, schema)
 }
